# proteus

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
captures/: README.md
configs/: client.example.yaml  server.example.yaml
crates/proteus-app/: .gitignore  Cargo.toml  tauri.conf.json
crates/proteus-app/capabilities/: default.json
crates/proteus-app/icons/: icon.icns
crates/proteus-app/src/: main.rs
crates/proteus-app/ui/: index.html  main.js  style.css
crates/proteus-client/: Cargo.toml
crates/proteus-client-core/: Cargo.toml
crates/proteus-client-core/src/: lib.rs
crates/proteus-client-core/tests/: connect.rs
crates/proteus-client/src/: main.rs
crates/proteus-core/: Cargo.toml
crates/proteus-core/src/: aead.rs  auth.rs  config.rs  decoy.rs  fingerprint.rs  frame.rs  jitter.rs  lib.rs  metrics.rs  padding.rs  policy.rs  proxy.rs  ratelimit.rs  replay.rs  subscription.rs  tls.rs
crates/proteus-panel/: Cargo.toml
crates/proteus-panel/src/: api.rs  auth.rs  db.rs  lib.rs  main.rs  web.rs
crates/proteus-panel/tests/: api.rs
crates/proteus-server/: Cargo.toml
crates/proteus-server/src/: client_db.rs  lib.rs  main.rs
crates/proteus-server/tests/: auth_smoke.rs  db_registry.rs  fingerprint.rs  jitter.rs  migration.rs  padding.rs  zero_rtt.rs
crates/proteus-server/tests/common/: mod.rs
crates/proteus-tools/: Cargo.toml
crates/proteus-tools/src/: fetch_decoy.rs  keygen.rs  main.rs  udp_test.rs
docs/: CONFIG.md  OPEN-ITEMS.md  PROTEUS-spec-v0.1.md  PROTEUS-spec-v0.2.md  PROTEUS-v0.4-plan.md  PROTEUS-v0.5-plan.md  PROTEUS-v0.6-control-plan.md  ROADMAP-v0.3.md  THREAT-MODEL-v0.3.md  fingerprint-profile.example.yaml  m10.5-pacer-signoff.md  m12.5-fingerprint-eval-signoff.md  m14-comparison-report.md  m14-invalid-client.md  m16.5-profile-padding-signoff.md  m2.4-dispatch-research.md  m5.5-padding-signoff.md  m6.4-zero-rtt.md  m7.4-connection-migration.md  m8.5-timing-jitter-signoff.md  m9.4-rc1-signoff.md  spike-m19-pq.md  spike-m5-exporter.md
scripts/: README.md  capture-h3.sh  capture-proteus.sh  compare-captures.sh
