[package]
name = "proteus-client"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
proteus-client-core = { path = "../proteus-client-core" }
proteus-core = { path = "../proteus-core" }
tokio = { version = "1", features = ["full"] }
