[package]
name = "proteus-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1"
hex = "0.4"
quinn = "0.11"
rcgen = "0.13"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "rt"] }
