[package]
name = "proteus-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
ed25519-dalek = "2"
hex = "0.4"
quinn = "0.11"
rand = "0.8"
rcgen = "0.13"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "rt"] }
