[package]
name = "proteus-panel"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

# v0.6 "Control" — management portal for PROTEUS. M0.6 is the scaffold:
# an axum app with a /health endpoint. DB (sqlx/SQLite), auth, and the
# management API land in M1.6+.

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = "0.7"
# M2.6b: cookie handling for session auth.
axum-extra = { version = "0.9", features = ["cookie"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
# M2.6b: server-side keypair generation when adding a client.
ed25519-dalek = { version = "2", features = ["rand_core"] }
proteus-core = { path = "../proteus-core" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
# M1.6: SQLite client store. Runtime query API (no compile-time DATABASE_URL
# needed); SQLite is local so no TLS feature.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
http-body-util = "0.1"
serde_json = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
