[package]
name = "proteus-server"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1"
proteus-core = { path = "../proteus-core" }
quinn = "0.11"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
rustls = "0.23"
tempfile = "3"
