[package]
name = "proteus-tools"
version = "0.1.0"
edition = "2024"
default-run = "proteus-tools"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
proteus-core = { path = "../proteus-core" }
quinn = "0.11"
rand = "0.8"
rcgen = "0.13"
# M8.4 fetch-decoy: HTTPS GET against a cover host. rustls-tls keeps the
# crypto stack consistent with the rest of the workspace; default-features
# off drops the openssl/native-tls path. http2/gzip/deflate/brotli match
# what a stock browser would offer so the request fingerprint blends in.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "http2",
    "gzip",
    "deflate",
    "brotli",
] }
rustls = "0.23"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
